  - _flatten(..., indirectRef) ➔ _flatten(..., indirect_ref)
  - _buildField ➔ _build_field
  - _checkKids ➔ _check_kids
  - _writeField ➔ _write_field
  - _write_field(..., fieldAttributes) ➔ _write_field(..., field_attributes)
  - _read_xref_subsections(..., getEntry, ...) ➔ _read_xref_subsections(..., get_entry, ...)

PdfWriter class:

  - addMetadata ➔ add_metadata
  - addPage ➔ append_page
  - insertPage ➔ insert_page
  - getPage(pageNumber) ➔ get_page(page_number)
  - getPageLayout / setPageLayout / pageLayout ➔ page_layout attribute
  - getPageMode / setPageMode / pageMode ➔ page_mode attribute
  - _addObject ➔ _add_object
  - _addPage ➔ _add_page
  - _sweepIndirectReferences ➔ _sweep_indirect_references

PdfMerger class
  - `__init__` parameter: strict=True ➔ strict=False (the PdfFileMerger still has the old default)
  - addMetadata ➔ add_metadata

Page class:
  - mergePage ➔ merge_page
  - rotateClockwise / rotateCounterClockwise ➔ rotate_clockwise
  - _mergeResources ➔ _merge_resources
  - _contentStreamRename ➔ _content_stream_rename
  - _pushPopGS ➔ _push_pop_gs
  - _addTransformationMatrix ➔ _add_transformation_matrix
  - _mergePage ➔ _merge_page

XmpInformation class:
  - getElement(..., aboutUri, ...) ➔ get_element(..., about_uri, ...)
  - getNodesInNamespace(..., aboutUri, ...) ➔ get_nodes_in_namespace(..., aboutUri, ...)
  - _getText ➔ _get_text

utils.py:
  - matrixMultiply ➔ matrix_multiply

Version 1.27.12, 2022-05-02
---------------------------

Bug Fixes (BUG):
-  _rebuild_xref_table expects trailer to be a dict (#857)

Documentation (DOC):
-  Security Policy

Full Changelog: https://github.com/py-pdf/PyPDF2/compare/1.27.11...1.27.12

Version 1.27.11, 2022-05-02
---------------------------

Bug Fixes (BUG):
-  Incorrectly issued xref warning/exception (#855)

Full Changelog: https://github.com/py-pdf/PyPDF2/compare/1.27.10...1.27.11

Version 1.27.10, 2022-05-01
---------------------------

Robustness (ROB):