@@ -46,7 +46,7 @@ def test_basic_features():
     # add some Javascript to launch the print window on opening this PDF.
     # the password dialog may prevent the print dialog from being shown,
     # comment the the encription lines, if that's the case, to try this out
-    writer.addJS("this.print({bUI:true,bSilent:false,bShrinkToFit:true});")
+    writer.add_js("this.print({bUI:true,bSilent:false,bShrinkToFit:true});")
 
     # encrypt your new PDF and add a password
     password = "secret"
